# StegaScan

./: .gitignore  Cargo.toml  README.md
analyzers/: Cargo.toml
analyzers/src/: exif_analyzer.rs  id3_analyzer.rs  image_filter.rs  lib.rs  lsb_analyzer.rs  magic_bytes_analyzer.rs  spectrogram_analyzer.rs  video_frame_analyzer.rs
core/: Cargo.toml
parsers/: Cargo.toml
parsers/src/: audio_parser.rs  image_parser.rs  lib.rs  text_parser.rs  video_parser.rs
steg_cli/: Cargo.toml
steg_cli/src/: json_report.rs  main.rs
stegascan-api/: Cargo.toml  README.md
stegascan-api/src/: analysis.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
