[package]
name = "parsers"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { version = "0.1.0", path = "../core" }
image = "0.25.8"
hound = "3.5.1"
symphonia = { version = "0.5.4", features = ["all"] }
ffmpeg-next = "8.0.0"
pdf-extract = "0.10.0"
docx-rs = "0.4.18"
rtf-parser = "0.4.2"
encoding_rs = "0.8.35"
zip = "6.0.0"
quick-xml = "0.38.4"
