[package]
name = "stegascan"
version = "0.1.0"
edition = "2024"

[dependencies]
#core = { path = "../core" }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
#reqwest = { version = "0.12.23", features = ["blocking"] } # For URL fetching
#zip = "5.1.1"
#walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
infer = "0.19.0"
base64 = "0.22.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
analyzers = { version = "0.1.0", path = "../analyzers" }
parsers = { version = "0.1.0", path = "../parsers" }
